--- a/app/new-items.html
+++ b/app/new-items.html
@@ -182,37 +182,100 @@
                   Top 10 Sellers
                 </div>
 
-                <div class="product__item">
+                <div class="aside__product-item">
+                  <div class="product__item">
 
-                  <a class="product__item-img" href="#"
-                    style="background-image: url(images/content/product-item.jpg);"></a>
+                    <a class="product__item-img" href="#"
+                      style="background-image: url(images/content/product-item.jpg);"></a>
 
-                  <div class="product__item-content">
-                    <div class="product__item-name">
-                      <a class="product__item-title" href="#">
-                        Responsive Mobile APP
-                      </a>
-                      <a class="product__item-category" href="#">
-                        Site Template
-                      </a>
+                    <div class="product__item-content">
+                      <div class="product__item-name">
+                        <a class="product__item-title" href="#">
+                          Mobile APP
+                        </a>
+                        <a class="product__item-category" href="#">
+                          Site Template
+                        </a>
+                      </div>
+                      <div class="product__item-price">
+                        $19
+                      </div>
                     </div>
-                    <div class="product__item-price">
-                      $19
+
+                    <div class="product__item-info">
+                      <a class="product__item-author" href="#">
+                        <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                        <span>Radiustheme</span>
+                      </a>
+                      <div class="product__item-star">
+                        <div class="rate-star"></div><span class="product__item-starnum">(05)</span>
+                      </div>
                     </div>
+
                   </div>
 
-                  <div class="product__item-info">
-                    <a class="product__item-author" href="#">
-                      <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
-                      <span>Radiustheme</span>
-                    </a>
-                    <div class="product__item-star">
-                      <div class="rate-star"></div>(<span>05</span>)
+                  <div class="product__item">
+
+                    <a class="product__item-img" href="#"
+                      style="background-image: url(images/content/product-item.jpg);"></a>
+
+                    <div class="product__item-content">
+                      <div class="product__item-name">
+                        <a class="product__item-title" href="#">
+                          Responsive APP
+                        </a>
+                        <a class="product__item-category" href="#">
+                          Site Template
+                        </a>
+                      </div>
+                      <div class="product__item-price">
+                        $19
+                      </div>
                     </div>
+
+                    <div class="product__item-info">
+                      <a class="product__item-author" href="#">
+                        <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                        <span>Radiustheme</span>
+                      </a>
+                      <div class="product__item-star">
+                        <div class="rate-star"></div><span class="product__item-starnum">(05)</span>
+                      </div>
+                    </div>
+
                   </div>
 
+                  <div class="product__item">
+
+                    <a class="product__item-img" href="#"
+                      style="background-image: url(images/content/product-item.jpg);"></a>
+
+                    <div class="product__item-content">
+                      <div class="product__item-name">
+                        <a class="product__item-title" href="#">
+                          Responsive APP
+                        </a>
+                        <a class="product__item-category" href="#">
+                          Site Template
+                        </a>
+                      </div>
+                      <div class="product__item-price">
+                        $19
+                      </div>
+                    </div>
+
+                    <div class="product__item-info">
+                      <a class="product__item-author" href="#">
+                        <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                        <span>Radiustheme</span>
+                      </a>
+                      <div class="product__item-star">
+                        <div class="rate-star"></div><span class="product__item-starnum">(05)</span>
+                      </div>
+                    </div>
+
+                  </div>
                 </div>
-
 
                 <a class="top-sellers__link" href="#">
                   View All
@@ -224,7 +287,14 @@
             <div class="product-page__content">
 
               <div class="product-page__filter">
-
+                <div class="product-page__filter-sort">
+                  <button class="icon-sort-amount-desc"></button> Sort by: New Items <button
+                    class="icon-unsorted"></button>
+                </div>
+                <div>
+                  <button class="icon-th-large active"></button>
+                  <button class="icon-th-list"></button>
+                </div>
               </div>
 
               <div class="product-page__items">
@@ -324,7 +394,7 @@
 
               <div class="pagination">
                 <ul class="pagination__list">
-                  <li><a class="active" href="#">1</a></li>
+                  <li><span class="active">1</span></li>
                   <li><a href="#">2</a></li>
                   <li><a href="#">3</a></li>
                   <li><a href="#">4</a></li>
