added product page items

--- a/app/new-items.html
+++ b/app/new-items.html
@@ -311,9 +311,13 @@
                       <a class="product__item-category" href="#">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales ( 14 )</span>
                     </div>
                   </div>
 
@@ -324,6 +328,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
 
@@ -342,9 +350,13 @@
                       <a class="product__item-category" href="#">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales ( 14 )</span>
                     </div>
                   </div>
 
@@ -355,6 +367,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
 
@@ -373,9 +389,13 @@
                       <a class="product__item-category" href="#">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales ( 14 )</span>
                     </div>
                   </div>
 
@@ -386,6 +406,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
 
