added header and footer responsive

--- a/app/new-items.html
+++ b/app/new-items.html
@@ -37,9 +37,148 @@
               </div>
 
               <div class="header__box">
-                <a class="basket" href="#"></a>
-                <a class="header__btn header__btn-login" href="#">Login</a>
-                <a class="header__btn header__btn-register" href="#">Register</a>
+
+                <div class="notification__box">
+
+                  <a class="notification header__circle active icon-bell-o" href="#">
+                    <span>8</span>
+                  </a>
+
+                  <div class="circkle__menu notification__menu">
+                    <a href="#" class="circkle__item icon-bell-o icons-color">
+                      <img class="circkle__images" src="images/content/message1.jpg" alt="">
+                      <div class="circkle__info">
+
+                        <div class="circkle__info-thema">Need WP Help!</div>
+                        <div class="circkle__info-date">26 Nov, 2016</div>
+                      </div>
+                    </a>
+                    <a href="#" class="circkle__item icon-bell-o">
+                      <img class="circkle__images" src="images/content/message2.jpg" alt="">
+                      <div class="circkle__info">
+
+                        <div class="circkle__info-thema">Need WP Help!</div>
+                        <div class="circkle__info-date">26 Nov, 2016</div>
+                      </div>
+                    </a>
+                    <a href="#" class="circkle__item icon-bell-o">
+                      <img class="circkle__images" src="images/content/message1.jpg" alt="">
+                      <div class="circkle__info">
+
+                        <div class="circkle__info-thema">Need WP Help!</div>
+                        <div class="circkle__info-date">26 Nov, 2016</div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+
+                <div class="message__box">
+
+                  <a class="message header__circle active icon-envelope-o" href="#">
+                    <span>5</span>
+                  </a>
+
+                  <div class="circkle__menu message__menu">
+                    <a href="#" class="circkle__item icon-envelope-o icons-color">
+                      <img class="circkle__images" src="images/content/message2.jpg" alt="">
+                      <div class="circkle__info">
+                        <div class="circkle__info-name">Kazi Fahim</div>
+                        <div class="circkle__info-thema">Need WP Help!</div>
+                        <div class="circkle__info-date">01 Dec, 2016</div>
+                      </div>
+                    </a>
+                    <a href="#" class="circkle__item icon-envelope-o">
+                      <img class="circkle__images" src="images/content/message1.jpg" alt="">
+                      <div class="circkle__info">
+                        <div class="circkle__info-name">Richi Lenal</div>
+                        <div class="circkle__info-thema">Need WP Help!</div>
+                        <div class="circkle__info-date">26 Nov, 2016</div>
+                      </div>
+                    </a>
+                    <a href="#" class="circkle__item icon-mail-reply">
+                      <img class="circkle__images" src="images/content/message2.jpg" alt="">
+                      <div class="circkle__info">
+                        <div class="circkle__info-name">PsdBosS</div>
+                        <div class="circkle__info-thema">Psd Template Help!</div>
+                        <div class="circkle__info-date">26 Nov, 2016</div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+
+                <div class="basket__box">
+                  <a class="basket header__circle active icon-shopping-cart" href="#">
+                    <span>8</span>
+                  </a>
+
+                  <div class="circkle__menu">
+                    <div class="circkle__item">
+                      <img class="circkle__images" src="images/content/basket-img1.jpg" alt="">
+                      <div class="circkle__info">
+                        <div class="circkle__info-name">Grand Ballet</div>
+                        <div class="circkle__info-thema">WordPress</div>
+                        <div class="circkle__info-price">$59</div>
+                      </div>
+                    </div>
+
+                    <div class="circkle__item">
+                      <img class="circkle__images" src="images/content/basket-img2.jpg" alt="">
+                      <div class="circkle__info">
+                        <div class="circkle__info-name">Apple Device</div>
+                        <div class="circkle__info-thema">WordPress</div>
+                        <div class="circkle__info-price">$59</div>
+                      </div>
+                    </div>
+
+                    <div class="basket__summ">
+                      <div class="basket__title">
+                        <div class="basket__summ-total">Total</div>
+                        <div class="basket__summ-price">$118</div>
+                      </div>
+                      <a class="basket__btn" href="#">Go to Cart</a>
+                      <a class="basket__btn basket__btn-checkout" href="#">Go to Checkout</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="user__box">
+                  <a class="user" href="#">
+                    <div class="user__inner">
+                      <div class="user__images">
+                        <img src="images/content/user-login.jpg" alt="">
+                      </div>
+                      <div class="user__info">
+                        <div class="user__name">
+                          Mike Hussy
+                        </div>
+                        <div class="user__money">
+                          $171.00
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+
+                  <div class="user__menu">
+                    <ul>
+                      <li><a class="angle-right" href="#">Profile Page</a></li>
+                      <li><a class="angle-right" href="#">Portfolio</a></li>
+                      <li><a class="angle-right" href="#">Account Setting</a></li>
+                      <li><a class="angle-right" href="#">Downloads</a></li>
+                      <li><a class="angle-right" href="#">Wishlist</a></li>
+                      <li><a class="angle-right" href="#">Upload Item</a></li>
+                      <li><a class="angle-right" href="#">Statement</a></li>
+                      <li><a class="angle-right" href="#">Withdraws</a></li>
+                    </ul>
+                  </div>
+                </div>
+
+                <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
+                <a class="header__btn header__btn-Logout header__btn-login--on" href="#">Logout</a>
+                <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
+              </div>
+
+              <div class="header__btn-menu icon-user">
+
               </div>
 
             </div>
@@ -49,6 +188,11 @@
         <div class="header__menu">
           <div class="container">
             <nav class="menu">
+              <div class="menu__btn">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
               <ul class="menu__list">
                 <li>
                   <a href="#">
@@ -438,7 +582,7 @@
         <div class="container">
           <div class="footer__inner">
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-adress">
               <div class="footer__col-title">
                 About Company
               </div>
@@ -480,7 +624,7 @@
               </ul>
             </div>
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-social">
               <div class="footer__col-title">
                 Follow Us On
               </div>
