--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 
               <div class="header__box">
 
-                <div class="notification__box">
+                <div class="notification__box header__btn-login--off">
 
                   <a class="notification header__circle active icon-bell-o" href="#">
                     <span>8</span>
@@ -74,7 +74,7 @@
                   </div>
                 </div>
 
-                <div class="message__box">
+                <div class="message__box header__btn-login--off">
 
                   <a class="message header__circle active icon-envelope-o" href="#">
                     <span>5</span>
@@ -144,7 +144,7 @@
                 </div>
 
                 <div class="user__box">
-                  <a class="user" href="#">
+                  <a class="user header__btn-login--off" href="#">
                     <div class="user__inner">
                       <div class="user__images">
                         <img src="images/content/user-login.jpg" alt="">
@@ -174,9 +174,13 @@
                   </div>
                 </div>
 
-                <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
-                <a class="header__btn header__btn-Logout header__btn-login--on" href="#">Logout</a>
-                <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
+                <a class="header__btn header__btn-login" href="#">Login</a>
+                <a class="header__btn header__btn-Logout header__btn-login--off" href="#">Logout</a>
+                <a class="header__btn header__btn-register" href="#">Register</a>
+              </div>
+
+              <div class="header__btn-menu icon-user">
+
               </div>
 
             </div>
@@ -186,6 +190,11 @@
         <div class="header__menu">
           <div class="container">
             <nav class="menu">
+              <div class="menu__btn">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
               <ul class="menu__list">
                 <li>
                   <a href="#">
@@ -1199,7 +1208,7 @@
         <div class="container">
           <div class="footer__inner">
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-adress">
               <div class="footer__col-title">
                 About Company
               </div>
@@ -1241,7 +1250,7 @@
               </ul>
             </div>
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-social">
               <div class="footer__col-title">
                 Follow Us On
               </div>
